// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheNavigationDrawer render TheNavigationDrawer with route /bydel/gamleoslo correctly 1`] = `
<aside
  class="navbar"
>
  <a
    class="logo-link router-link-active"
    href="/"
  >
    <img
      alt="oslo-logo"
      class="oslo__logo"
      src=""
    />
  </a>
   
  <button
    class="selectedTopic"
  >
    Sammenlign bydeler (1)
  </button>
   
  <div
    class="version-tag"
  >
    Alpha
  </div>
   
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="state-toggle"
    >
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link router-link-exact-active router-link-active"
          href="/bydel/gamleoslo"
        >
          Utforsk
          <br />
          en bydel
        </a>
      </li>
       
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link state-toggle__link--active"
          href="/bydel/alle"
        >
          Sammenlign bydeler
        </a>
      </li>
    </ul>
     
    <header
      class="navigation-header"
    >
      <select
        aria-label="Velg byområde"
        class="navigation-header__select"
        id="navigation-drawer-select"
      >
        <option
          disabled="disabled"
          value=""
        >
          - Velg byområde -
        </option>
        <option
          value="04,05,06,07,08"
        >
          Vest
        </option>
        <option
          value="01,02,03,09,10,11,12,13,14,15"
        >
          Øst
        </option>
        <option
          value="01,02,03,04,05"
        >
          Indre by
        </option>
        <option
          value="01,02,03"
        >
          Indre by øst
        </option>
        <option
          value="04,05"
        >
          Indre by vest
        </option>
        <option
          value="06,07,08,09,10,11,12,13,14,15"
        >
          Ytre by
        </option>
        <option
          value="06,07,08"
        >
          Ytre by vest
        </option>
        <option
          value="09,10,11,12"
        >
          Ytre by øst
        </option>
        <option
          value="13,14,15"
        >
          Ytre by sør
        </option>
        <option
          value="01,02,03,04,05,06,07,08,09,10,11,12,13,14,15"
        >
          Velg alle
        </option>
      </select>
    </header>
     
    <ul
      class="navigation-list"
    >
      <li
        class="navigation-link navigation-link--compare"
      >
        <input
          id="checkbox-gamleoslo"
          tabindex="1"
          type="checkbox"
          value="01"
        />
         
        <label
          class="compare"
          for="checkbox-gamleoslo"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Gamle Oslo
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grunerlokka"
          tabindex="1"
          type="checkbox"
          value="02"
        />
         
        <label
          class="compare"
          for="checkbox-grunerlokka"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Grünerløkka
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sagene"
          tabindex="1"
          type="checkbox"
          value="03"
        />
         
        <label
          class="compare"
          for="checkbox-sagene"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Sagene
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sthanshaugen"
          tabindex="1"
          type="checkbox"
          value="04"
        />
         
        <label
          class="compare"
          for="checkbox-sthanshaugen"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel St. Hanshaugen
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-frogner"
          tabindex="1"
          type="checkbox"
          value="05"
        />
         
        <label
          class="compare"
          for="checkbox-frogner"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Frogner
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ullern"
          tabindex="1"
          type="checkbox"
          value="06"
        />
         
        <label
          class="compare"
          for="checkbox-ullern"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Ullern
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-vestreaker"
          tabindex="1"
          type="checkbox"
          value="07"
        />
         
        <label
          class="compare"
          for="checkbox-vestreaker"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Vestre Aker
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordreaker"
          tabindex="1"
          type="checkbox"
          value="08"
        />
         
        <label
          class="compare"
          for="checkbox-nordreaker"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Nordre Aker
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-bjerke"
          tabindex="1"
          type="checkbox"
          value="09"
        />
         
        <label
          class="compare"
          for="checkbox-bjerke"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Bjerke
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grorud"
          tabindex="1"
          type="checkbox"
          value="10"
        />
         
        <label
          class="compare"
          for="checkbox-grorud"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Grorud
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-stovner"
          tabindex="1"
          type="checkbox"
          value="11"
        />
         
        <label
          class="compare"
          for="checkbox-stovner"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Stovner
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-alna"
          tabindex="1"
          type="checkbox"
          value="12"
        />
         
        <label
          class="compare"
          for="checkbox-alna"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Alna
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ostensjo"
          tabindex="1"
          type="checkbox"
          value="13"
        />
         
        <label
          class="compare"
          for="checkbox-ostensjo"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Østensjø
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordstrand"
          tabindex="1"
          type="checkbox"
          value="14"
        />
         
        <label
          class="compare"
          for="checkbox-nordstrand"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Nordstrand
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sondrenordstrand"
          tabindex="1"
          type="checkbox"
          value="15"
        />
         
        <label
          class="compare"
          for="checkbox-sondrenordstrand"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Søndre Nordstrand
          </span>
        </label>
         
        <!---->
      </li>
    </ul>
  </nav>
</aside>
`;

exports[`TheNavigationDrawer renders TheNavigationDrawer correctly 1`] = `
<aside
  class="navbar"
>
  <a
    class="logo-link router-link-active"
    href="/"
  >
    <img
      alt="oslo-logo"
      class="oslo__logo"
      src=""
    />
  </a>
   
  <button
    class="selectedTopic"
  >
    Sammenlign bydeler (15)
  </button>
   
  <div
    class="version-tag"
  >
    Alpha
  </div>
   
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="state-toggle"
    >
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link"
          href="/bydel/gamleoslo"
        >
          Utforsk
          <br />
          en bydel
        </a>
      </li>
       
      <li
        class="state-toggle__element"
      >
        <a
          class="state-toggle__link state-toggle__link--active"
          href="/bydel/alle"
        >
          Sammenlign bydeler
        </a>
      </li>
    </ul>
     
    <header
      class="navigation-header"
    >
      <select
        aria-label="Velg byområde"
        class="navigation-header__select"
        id="navigation-drawer-select"
      >
        <option
          disabled="disabled"
          value=""
        >
          - Velg byområde -
        </option>
        <option
          value="04,05,06,07,08"
        >
          Vest
        </option>
        <option
          value="01,02,03,09,10,11,12,13,14,15"
        >
          Øst
        </option>
        <option
          value="01,02,03,04,05"
        >
          Indre by
        </option>
        <option
          value="01,02,03"
        >
          Indre by øst
        </option>
        <option
          value="04,05"
        >
          Indre by vest
        </option>
        <option
          value="06,07,08,09,10,11,12,13,14,15"
        >
          Ytre by
        </option>
        <option
          value="06,07,08"
        >
          Ytre by vest
        </option>
        <option
          value="09,10,11,12"
        >
          Ytre by øst
        </option>
        <option
          value="13,14,15"
        >
          Ytre by sør
        </option>
        <option
          value="01,02,03,04,05,06,07,08,09,10,11,12,13,14,15"
        >
          Velg alle
        </option>
      </select>
    </header>
     
    <ul
      class="navigation-list"
    >
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-gamleoslo"
          tabindex="1"
          type="checkbox"
          value="01"
        />
         
        <label
          class="compare"
          for="checkbox-gamleoslo"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Gamle Oslo
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grunerlokka"
          tabindex="1"
          type="checkbox"
          value="02"
        />
         
        <label
          class="compare"
          for="checkbox-grunerlokka"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Grünerløkka
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sagene"
          tabindex="1"
          type="checkbox"
          value="03"
        />
         
        <label
          class="compare"
          for="checkbox-sagene"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Sagene
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sthanshaugen"
          tabindex="1"
          type="checkbox"
          value="04"
        />
         
        <label
          class="compare"
          for="checkbox-sthanshaugen"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel St. Hanshaugen
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-frogner"
          tabindex="1"
          type="checkbox"
          value="05"
        />
         
        <label
          class="compare"
          for="checkbox-frogner"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Frogner
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ullern"
          tabindex="1"
          type="checkbox"
          value="06"
        />
         
        <label
          class="compare"
          for="checkbox-ullern"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Ullern
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-vestreaker"
          tabindex="1"
          type="checkbox"
          value="07"
        />
         
        <label
          class="compare"
          for="checkbox-vestreaker"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Vestre Aker
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordreaker"
          tabindex="1"
          type="checkbox"
          value="08"
        />
         
        <label
          class="compare"
          for="checkbox-nordreaker"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Nordre Aker
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-bjerke"
          tabindex="1"
          type="checkbox"
          value="09"
        />
         
        <label
          class="compare"
          for="checkbox-bjerke"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Bjerke
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grorud"
          tabindex="1"
          type="checkbox"
          value="10"
        />
         
        <label
          class="compare"
          for="checkbox-grorud"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Grorud
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-stovner"
          tabindex="1"
          type="checkbox"
          value="11"
        />
         
        <label
          class="compare"
          for="checkbox-stovner"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Stovner
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-alna"
          tabindex="1"
          type="checkbox"
          value="12"
        />
         
        <label
          class="compare"
          for="checkbox-alna"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Alna
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ostensjo"
          tabindex="1"
          type="checkbox"
          value="13"
        />
         
        <label
          class="compare"
          for="checkbox-ostensjo"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Østensjø
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordstrand"
          tabindex="1"
          type="checkbox"
          value="14"
        />
         
        <label
          class="compare"
          for="checkbox-nordstrand"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Nordstrand
          </span>
        </label>
         
        <!---->
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sondrenordstrand"
          tabindex="1"
          type="checkbox"
          value="15"
        />
         
        <label
          class="compare"
          for="checkbox-sondrenordstrand"
        >
          <span
            class="navigation-link__label navigation-link__label--span"
          >
            Bydel Søndre Nordstrand
          </span>
        </label>
         
        <!---->
      </li>
    </ul>
  </nav>
</aside>
`;
